# LzxTools

./: LICENSE  Pipfile  README.md  lzx_parser.py  main.py  otomoto_scrapper.py  pepper_scrapper.py  pyproject.toml  scrapper_base.py  template.html  template_web.html
